Alignment fix

--- a/frontend/portal/src/app/shared/header/header.component.scss
+++ b/frontend/portal/src/app/shared/header/header.component.scss
@@ -104,4 +104,6 @@
     top: 0;
     z-index: 1;
   }
-  
+  .link {
+    cursor: pointer;
+  }
